--- a/2_laba.uvprojx
+++ b/2_laba.uvprojx
@@ -403,6 +403,11 @@
               <FileType>5</FileType>
               <FilePath>.\functions.h</FilePath>
             </File>
+            <File>
+              <FileName>c_functions.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\c_functions.h</FilePath>
+            </File>
           </Files>
         </Group>
       </Groups>
