--- a/2_laba.uvprojx
+++ b/2_laba.uvprojx
@@ -404,9 +404,9 @@
               <FilePath>.\functions.h</FilePath>
             </File>
             <File>
-              <FileName>c_functions.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\c_functions.h</FilePath>
+              <FileName>functions.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\functions.c</FilePath>
             </File>
           </Files>
         </Group>
