--- a/3.1.uvprojx
+++ b/3.1.uvprojx
@@ -388,6 +388,16 @@
               <FileType>1</FileType>
               <FilePath>.\main.c</FilePath>
             </File>
+            <File>
+              <FileName>functions.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\functions.h</FilePath>
+            </File>
+            <File>
+              <FileName>functions.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\functions.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
